--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,18 +1,19 @@
 {
   "compilerOptions": {
+    "jsx": "react-jsx",
     "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "moduleResolution": "Node",
+    "moduleResolution": "bundler",
     "allowSyntheticDefaultImports": true,
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "strict": true,
-    "jsx": "react-jsx",
-    "baseUrl": ".",                    // 👈 Required
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["src/*"]                 // 👈 This is the alias
-    }
+      "@/*": ["src/*"]
+    },
+    "lib": ["DOM", "ESNext"]  // ✅ ADD THIS LINE
   },
   "include": ["src"],
   "exclude": ["node_modules"]
