--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,6 @@
     },
     "lib": ["DOM", "ESNext"]  // ✅ ADD THIS LINE
   },
-  "include": ["src"],
+  "include": ["src", "vite.config.ts"],
   "exclude": ["node_modules"]
 }
